# auto_driver_demo

./: .gitignore  README.md  start.sh
src/detector/detector_cpp/: CMakeLists.txt  package.xml
src/detector/detector_cpp/include/detector_cpp/: detector_node.hpp  traffic_sign.hpp  traffic_sign_detector.hpp
src/detector/detector_cpp/src/: detector_node.cpp  traffic_sign_detector.cpp
src/detector/detector_python/: package.xml  setup.cfg  setup.py
src/driver_bringup/: CMakeLists.txt  package.xml
src/driver_bringup/config/: camera_info.yaml  launch_params.yaml
src/driver_bringup/config/node_params/: detector_cpp_params.yaml  video_driver_params.yaml  web_node_params.yaml
src/driver_bringup/launch/: bringup.launch.py
src/driver_interfaces/: CMakeLists.txt  package.xml
src/driver_interfaces/msg/: Signal.msg  Signals.msg
src/hardware_driver/auto_serial_driver/: CMakeLists.txt  package.xml
src/hardware_driver/auto_serial_driver/src/: virtual_serial_driver.cpp
src/hardware_driver/camera_driver/: CMakeLists.txt  package.xml
src/hardware_driver/camera_driver/src/: video_driver.cpp
src/resource/: CMakeLists.txt  package.xml
src/resource/html/: index.html
src/utils/: CMakeLists.txt  package.xml
src/utils/include/utils/: url_resolver.hpp
src/utils/src/: url_resolver.cpp
